--- a/codemirror/theme/maxdown-light.css
+++ b/codemirror/theme/maxdown-light.css
@@ -7,7 +7,7 @@
 }
 
 .CodeMirror div.CodeMirror-cursor {
-  border-left: 2px solid #2ecc71;
+  border-left: 4px solid #2ecc71;
 }
 
 .CodeMirror div.CodeMirror-selected {
